--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "https-browserify": "^1.0.0",
     "ipfs-car": "^0.7.0",
     "ipfs-http-client": "^50.0.0",
+    "ipfs-unixfs-exporter": "^8.0.4",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "moralis": "^1.9.0",
@@ -52,13 +53,14 @@
     "url": "^0.11.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
-    "web3.storage": "^4.3.0",
-    "web3": "^1.7.5"
+    "web3": "^1.7.5",
+    "web3.storage": "^4.3.0"
   },
   "description": "https://github.com/mui/material-ui/blob/v5.8.7/docs/data/material/components/dialogs/FormDialog.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    
+    "start": "if-node-version '>= 17' && react-scripts --openssl-legacy-provider start || react-scripts start",
+    "build": "react-scripts --max-old-space-size=8192 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
